[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/BasicTile.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://sprites/InvisibleTile.png" type="Texture" id=4]
[ext_resource path="res://SwipeCam.gd" type="Script" id=5]
[ext_resource path="res://sprites/DevTile.png" type="Texture" id=6]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "BasicTile.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "InvisibleTile.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=8]
0/name = "DevTile.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 7 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="OccultBG" type="TextureRect" parent="."]
visible = false
margin_top = -61.0
margin_right = 12142.0
margin_bottom = 1037.0
texture = SubResource( 6 )
expand = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 297, -8 )
scale = Vector2( 10, 10 )
amount = 40000
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 10000, 1 )
direction = Vector2( -1, 2 )
spread = 2.0
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
color = Color( 0.152941, 0.866667, 0.866667, 1 )

[node name="VisibleMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 211, 0, 0, 65747, 0, 0, 131283, 0, 0, 196819, 0, 0, 262355, 0, 0, 458933, 0, 0, 458934, 0, 0, 458935, 0, 0, 458936, 0, 0, 458937, 0, 0, 458938, 0, 0, 458939, 0, 0, 458946, 0, 0, 458947, 0, 0, 458948, 0, 0, 458949, 0, 0, 458950, 0, 0, 458951, 0, 0, 458956, 0, 0, 458957, 0, 0, 458958, 0, 0, 458959, 0, 0, 458960, 0, 0, 458961, 0, 0, 458962, 0, 0, 458963, 0, 0, 458964, 0, 0, 458965, 0, 0, 458966, 0, 0, 458967, 0, 0, 524379, 0, 0, 524380, 0, 0, 524381, 0, 0, 524382, 0, 0, 524383, 0, 0, 524384, 0, 0, 524385, 0, 0, 524386, 0, 0, 524387, 0, 0, 524388, 0, 0, 524389, 0, 0, 524390, 0, 0, 524391, 0, 0, 524392, 0, 0, 524393, 0, 0, 524394, 0, 0, 524395, 0, 0, 524396, 0, 0, 524397, 0, 0, 524398, 0, 0, 524399, 0, 0, 524400, 0, 0, 524401, 0, 0, 524402, 0, 0, 524403, 0, 0, 524404, 0, 0, 524405, 0, 0, 524406, 0, 0, 524407, 0, 0, 524408, 0, 0, 524409, 0, 0, 524410, 0, 0, 524411, 0, 0, 524412, 0, 0, 524413, 0, 0, 524414, 0, 0, 524415, 0, 0, 524416, 0, 0, 524578, 0, 0, 524579, 0, 0, 524580, 0, 0, 524581, 0, 0, 524582, 0, 0, 524583, 0, 0, 524584, 0, 0, 524593, 0, 0, 524594, 0, 0, 524595, 0, 0, 524596, 0, 0, 524598, 0, 0, 524600, 0, 0, 524602, 0, 0, 524604, 0, 0, 524606, 0, 0, 524608, 0, 0, 524610, 0, 0, 655535, 0, 0, 655536, 0, 0, 655537, 0, 0, 655538, 0, 0, 655539, 0, 0, 655642, 0, 0, 655643, 0, 0, 655644, 0, 0, 655645, 0, 0, 655646, 0, 0, 721129, 0, 0, 721130, 0, 0, 721131, 0, 0, 721132, 0, 0, 721133, 0, 0, 721134, 0, 0, 852138, 0, 0, 852139, 0, 0, 852140, 0, 0, 852141, 0, 0, 852142, 0, 0, 917564, 0, 0, 917565, 0, 0, 917566, 0, 0, 917567, 0, 0, 917568, 0, 0, 917569, 0, 0, 917570, 0, 0, 917575, 0, 0, 917576, 0, 0, 917581, 0, 0, 917582, 0, 0, 917595, 0, 0, 917596, 0, 0, 917597, 0, 0, 917598, 0, 0, 917599, 0, 0, 917600, 0, 0, 917601, 0, 0, 917602, 0, 0, 917603, 0, 0, 917604, 0, 0, 917605, 0, 0, 917606, 0, 0, 917607, 0, 0, 917608, 0, 0, 917609, 0, 0, 917610, 0, 0, 917611, 0, 0, 917612, 0, 0, 917613, 0, 0, 917614, 0, 0, 917615, 0, 0, 917616, 0, 0, 917617, 0, 0, 917618, 0, 0, 917619, 0, 0, 917620, 0, 0, 917621, 0, 0, 917622, 0, 0, 917623, 0, 0, 917624, 0, 0, 917625, 0, 0, 917626, 0, 0, 917627, 0, 0, 917628, 0, 0, 917629, 0, 0, 917630, 0, 0, 917631, 0, 0, 917632, 0, 0, 983111, 0, 0, 983112, 0, 0, 983117, 0, 0, 983118, 0, 0, 1048647, 0, 0, 1048648, 0, 0, 1048653, 0, 0, 1048654, 0, 0, 1048740, 0, 0, 1048741, 0, 0, 1048742, 0, 0, 1048743, 0, 0, 1048744, 0, 0, 1048802, 0, 0, 1048803, 0, 0, 1048804, 0, 0, 1048805, 0, 0, 1048806, 0, 0, 1048807, 0, 0, 1048808, 0, 0, 1048858, 0, 0, 1048859, 0, 0, 1048860, 0, 0, 1048861, 0, 0, 1048862, 0, 0, 1048868, 0, 0, 1048869, 0, 0, 1048870, 0, 0, 1048871, 0, 0, 1048872, 0, 0, 1048877, 0, 0, 1048878, 0, 0, 1048879, 0, 0, 1048880, 0, 0, 1048881, 0, 0, 1048882, 0, 0, 1114164, 0, 0, 1114165, 0, 0, 1114166, 0, 0, 1114167, 0, 0, 1114168, 0, 0, 1114169, 0, 0, 1114170, 0, 0, 1179806, 0, 0, 1179807, 0, 0, 1179808, 0, 0, 1179809, 0, 0, 1179810, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245228, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1245233, 0, 0, 1245275, 0, 0, 1245276, 0, 0, 1245277, 0, 0, 1245278, 0, 0, 1245279, 0, 0, 1245280, 0, 0, 1245281, 0, 0, 1245282, 0, 0, 1245283, 0, 0, 1245284, 0, 0, 1245285, 0, 0, 1245286, 0, 0, 1245287, 0, 0, 1245288, 0, 0, 1245289, 0, 0, 1245290, 0, 0, 1245291, 0, 0, 1245292, 0, 0, 1245293, 0, 0, 1245294, 0, 0, 1245295, 0, 0, 1245296, 0, 0, 1245297, 0, 0, 1245298, 0, 0, 1245299, 0, 0, 1245300, 0, 0, 1245301, 0, 0, 1245302, 0, 0, 1245303, 0, 0, 1245304, 0, 0, 1245305, 0, 0, 1245306, 0, 0, 1245307, 0, 0, 1245308, 0, 0, 1245309, 0, 0, 1245310, 0, 0, 1245311, 0, 0, 1245312, 0, 0, 1245313, 0, 0, 1245314, 0, 0, 1245324, 0, 0, 1245325, 0, 0, 1245326, 0, 0, 1245327, 0, 0, 1245328, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 404, 586 )

[node name="InvisibleMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( -65349, 0, 0, 187, 0, 0, 65723, 0, 0, 131259, 0, 0, 196795, 0, 0, 262331, 0, 0, 327867, 0, 0, 327888, 0, 0, 393403, 0, 0, 393424, 0, 0, 524503, 0, 0, 524585, 0, 0, 524586, 0, 0, 524587, 0, 0, 524588, 0, 0, 524589, 0, 0, 524597, 0, 0, 524599, 0, 0, 524601, 0, 0, 524603, 0, 0, 524605, 0, 0, 524607, 0, 0, 524609, 0, 0, 589952, 0, 0, 590039, 0, 0, 590072, 0, 0, 590073, 0, 0, 590074, 0, 0, 590075, 0, 0, 590076, 0, 0, 590077, 0, 0, 590135, 0, 0, 655488, 0, 0, 655549, 0, 0, 655550, 0, 0, 655551, 0, 0, 655552, 0, 0, 655562, 0, 0, 655563, 0, 0, 655564, 0, 0, 655565, 0, 0, 655566, 0, 0, 655567, 0, 0, 655568, 0, 0, 655569, 0, 0, 655570, 0, 0, 655571, 0, 0, 655572, 0, 0, 655575, 0, 0, 655629, 0, 0, 655630, 0, 0, 655631, 0, 0, 655632, 0, 0, 655650, 0, 0, 655671, 0, 0, 721024, 0, 0, 721122, 0, 0, 721123, 0, 0, 721124, 0, 0, 721125, 0, 0, 721126, 0, 0, 721127, 0, 0, 721128, 0, 0, 721135, 0, 0, 721136, 0, 0, 721137, 0, 0, 721138, 0, 0, 721139, 0, 0, 721140, 0, 0, 721141, 0, 0, 721186, 0, 0, 721207, 0, 0, 786560, 0, 0, 786664, 0, 0, 786722, 0, 0, 786743, 0, 0, 852096, 0, 0, 852150, 0, 0, 852151, 0, 0, 852152, 0, 0, 852153, 0, 0, 852154, 0, 0, 852155, 0, 0, 852186, 0, 0, 852187, 0, 0, 852188, 0, 0, 852189, 0, 0, 852190, 0, 0, 852191, 0, 0, 852200, 0, 0, 852224, 0, 0, 852225, 0, 0, 852226, 0, 0, 852227, 0, 0, 852232, 0, 0, 852233, 0, 0, 852245, 0, 0, 852246, 0, 0, 852258, 0, 0, 852279, 0, 0, 917586, 0, 0, 917587, 0, 0, 917588, 0, 0, 917589, 0, 0, 917590, 0, 0, 917591, 0, 0, 917736, 0, 0, 917768, 0, 0, 917769, 0, 0, 917781, 0, 0, 917782, 0, 0, 917794, 0, 0, 917815, 0, 0, 983148, 0, 0, 983158, 0, 0, 983272, 0, 0, 983330, 0, 0, 983351, 0, 0, 1048684, 0, 0, 1048694, 0, 0, 1048887, 0, 0, 1114139, 0, 0, 1114153, 0, 0, 1114215, 0, 0, 1114225, 0, 0, 1179675, 0, 0, 1179689, 0, 0, 1179751, 0, 0, 1179761, 0, 0, 1245317, 0, 0, 1245318, 0, 0, 1245319, 0, 0, 1245320, 0, 0, 1245333, 0, 0, 1245334, 0, 0, 1245335, 0, 0, 1245336, 0, 0, 1245337, 0, 0, 1245338, 0, 0, 1245339, 0, 0, 1245340, 0, 0, 1245341, 0, 0 )

[node name="SwipeCam" type="Camera2D" parent="."]
position = Vector2( 313, 367 )
current = true
script = ExtResource( 5 )

[node name="DevTiles" type="TileMap" parent="."]
tile_set = SubResource( 8 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1

[connection signal="exit_screen" from="Player" to="." method="playerExitScreen"]
